--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
-  floating_bottom_bar: ^0.0.2
   animated_splash_screen: ^1.3.0
-  floating_navbar: ^2.0.2
+  flutter_floating_bottom_bar: ^1.2.0
 
 dev_dependencies:
   flutter_test:
